// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatMessage formats all 1`] = `
"feat(scope): subject

description of the change

BREAKING CHANGE: this is a breaking change

closes #1
closes #2
"
`;

exports[`formatMessage formats body 1`] = `
"type(scope): subject

lore ipsum:
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
occaecat cupidatat non proident, sunt in culpa qui officia deserunt
mollit anim id est laborum.
"
`;

exports[`formatMessage formats breaking change 1`] = `
"type(scope): subject

BREAKING CHANGE: a breaking change
"
`;

exports[`formatMessage formats header 1`] = `
"type: subject
"
`;

exports[`formatMessage formats issues 1`] = `
"fix(scope): subject

fixes #1
fixes #2
"
`;

exports[`formatMessage formats issues 2`] = `
"feat(scope): subject

closes #1
closes #2
"
`;

exports[`formatMessage formats scoped header 1`] = `
"type(scope): subject
"
`;
